// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`render default (success) Message 1`] = `
.c5 {
  vertical-align: middle;
  color: #2AAB3F;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  box-sizing: border-box;
  background-color: #FFFFFF;
}

.c3 {
  box-sizing: border-box;
}

.c1 {
  gap: 1rem;
  display: grid;
}

.c4 {
  grid-area: icon;
}

.c6 {
  grid-area: messages;
}

.c7 {
  color: #313440;
  margin: 0 0 1rem;
  color: #5E637A;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  margin: 0 0 0.75rem;
}

.c7:last-child {
  margin-bottom: 0;
}

.c2 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  grid-gap: 0.75rem;
  padding: 0.75rem;
  grid-template-areas: 'icon messages';
  grid-template-columns: 1.5rem 1fr;
  border-left: 0.25rem solid #2AAB3F;
}

.c8 {
  color: #313440;
  vertical-align: middle;
}

<div
  class="c0 c1 c2"
  role="alert"
  type="success"
>
  <div
    class="c3 c4"
  >
    <svg
      aria-hidden="true"
      class="c5"
      color="success"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2M9.29 16.29 5.7 12.7a.996.996 0 1 1 1.41-1.41L10 14.17l6.88-6.88a.996.996 0 1 1 1.41 1.41l-7.59 7.59a.996.996 0 0 1-1.41 0"
      />
    </svg>
  </div>
  <div
    class="c3 c6"
  >
    <div
      class="c3"
    >
      <span
        class="c7 c8"
      >
        Success
      </span>
       
    </div>
  </div>
</div>
`;

exports[`render error Message 1`] = `
.c5 {
  vertical-align: middle;
  color: #DB3643;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  box-sizing: border-box;
  background-color: #FFFFFF;
}

.c3 {
  box-sizing: border-box;
}

.c1 {
  gap: 1rem;
  display: grid;
}

.c4 {
  grid-area: icon;
}

.c6 {
  grid-area: messages;
}

.c7 {
  color: #313440;
  margin: 0 0 1rem;
  color: #5E637A;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  margin: 0 0 0.75rem;
}

.c7:last-child {
  margin-bottom: 0;
}

.c2 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  grid-gap: 0.75rem;
  padding: 0.75rem;
  grid-template-areas: 'icon messages';
  grid-template-columns: 1.5rem 1fr;
  border-left: 0.25rem solid #DB3643;
}

.c8 {
  color: #313440;
  vertical-align: middle;
}

<div
  class="c0 c1 c2"
  role="alert"
  type="error"
>
  <div
    class="c3 c4"
  >
    <svg
      aria-hidden="true"
      class="c5"
      color="danger"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 11c-.55 0-1-.45-1-1V8c0-.55.45-1 1-1s1 .45 1 1v4c0 .55-.45 1-1 1m1 4h-2v-2h2z"
      />
    </svg>
  </div>
  <div
    class="c3 c6"
  >
    <div
      class="c3"
    >
      <span
        class="c7 c8"
      >
        Error
      </span>
       
    </div>
  </div>
</div>
`;

exports[`render info Message 1`] = `
.c5 {
  vertical-align: middle;
  color: #0B38D9;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  box-sizing: border-box;
  background-color: #FFFFFF;
}

.c3 {
  box-sizing: border-box;
}

.c1 {
  gap: 1rem;
  display: grid;
}

.c4 {
  grid-area: icon;
}

.c6 {
  grid-area: messages;
}

.c7 {
  color: #313440;
  margin: 0 0 1rem;
  color: #5E637A;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  margin: 0 0 0.75rem;
}

.c7:last-child {
  margin-bottom: 0;
}

.c2 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  grid-gap: 0.75rem;
  padding: 0.75rem;
  grid-template-areas: 'icon messages';
  grid-template-columns: 1.5rem 1fr;
  border-left: 0.25rem solid #0B38D9;
}

.c8 {
  color: #313440;
  vertical-align: middle;
}

<div
  class="c0 c1 c2"
  role="alert"
  type="info"
>
  <div
    class="c3 c4"
  >
    <svg
      aria-hidden="true"
      class="c5"
      color="primary60"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 15c-.55 0-1-.45-1-1v-4c0-.55.45-1 1-1s1 .45 1 1v4c0 .55-.45 1-1 1m1-8h-2V7h2z"
      />
    </svg>
  </div>
  <div
    class="c3 c6"
  >
    <div
      class="c3"
    >
      <span
        class="c7 c8"
      >
        Info
      </span>
       
    </div>
  </div>
</div>
`;

exports[`render warning Message 1`] = `
.c5 {
  vertical-align: middle;
  color: #FFAE00;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  box-sizing: border-box;
  background-color: #FFFFFF;
}

.c3 {
  box-sizing: border-box;
}

.c1 {
  gap: 1rem;
  display: grid;
}

.c4 {
  grid-area: icon;
}

.c6 {
  grid-area: messages;
}

.c7 {
  color: #313440;
  margin: 0 0 1rem;
  color: #5E637A;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  margin: 0 0 0.75rem;
}

.c7:last-child {
  margin-bottom: 0;
}

.c2 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  grid-gap: 0.75rem;
  padding: 0.75rem;
  grid-template-areas: 'icon messages';
  grid-template-columns: 1.5rem 1fr;
  border-left: 0.25rem solid #FFAE00;
}

.c8 {
  color: #313440;
  vertical-align: middle;
}

<div
  class="c0 c1 c2"
  role="alert"
  type="warning"
>
  <div
    class="c3 c4"
  >
    <svg
      aria-hidden="true"
      class="c5"
      color="warning50"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M4.47 21h15.06c1.54 0 2.5-1.67 1.73-3L13.73 4.99c-.77-1.33-2.69-1.33-3.46 0L2.74 18c-.77 1.33.19 3 1.73 3M12 14c-.55 0-1-.45-1-1v-2c0-.55.45-1 1-1s1 .45 1 1v2c0 .55-.45 1-1 1m1 4h-2v-2h2z"
      />
    </svg>
  </div>
  <div
    class="c3 c6"
  >
    <div
      class="c3"
    >
      <span
        class="c7 c8"
      >
        Warning
      </span>
       
    </div>
  </div>
</div>
`;

exports[`renders actions 1`] = `
.c0 {
  color: #313440;
  margin: 0 0 1rem;
  color: #5E637A;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  margin: 0 0 0.75rem;
}

.c0:last-child {
  margin-bottom: 0;
}

.c1 {
  color: #313440;
  vertical-align: middle;
}

@media (min-width:720px) {

}

@media (min-width:720px) {

}

<span
  class="c0 c1"
>
  Success
</span>
`;

exports[`renders close button 1`] = `
.c0 {
  color: #313440;
  margin: 0 0 1rem;
  color: #5E637A;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  margin: 0 0 0.75rem;
}

.c0:last-child {
  margin-bottom: 0;
}

.c1 {
  color: #313440;
  vertical-align: middle;
}

@media (min-width:720px) {

}

@media (min-width:720px) {

}

<span
  class="c0 c1"
>
  Success
</span>
`;

exports[`renders header 1`] = `
.c0 {
  color: #313440;
  margin: 0 0 1rem;
  color: #5E637A;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  margin: 0 0 0.75rem;
}

.c0:last-child {
  margin-bottom: 0;
}

.c1 {
  color: #313440;
  vertical-align: middle;
}

<span
  class="c0 c1"
>
  Success
</span>
`;

exports[`renders with external link 1`] = `
.c0 {
  color: #313440;
  margin: 0 0 1rem;
  color: #5E637A;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  margin: 0 0 0.75rem;
}

.c0:last-child {
  margin-bottom: 0;
}

.c1 {
  color: #313440;
  vertical-align: middle;
}

<span
  class="c0 c1"
>
  Success
</span>
`;

exports[`renders with link 1`] = `
.c0 {
  color: #313440;
  margin: 0 0 1rem;
  color: #5E637A;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  margin: 0 0 0.75rem;
}

.c0:last-child {
  margin-bottom: 0;
}

.c1 {
  color: #313440;
  vertical-align: middle;
}

<span
  class="c0 c1"
>
  Success
</span>
`;
